# Open-Assistant

./: .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .prettierignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  PRIVACY.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SPEC.md  SUPPORT.md  TESTING.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: amo-status.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  e2e-firefox.yml  native-release.yml  nightly.yml  release-prepare.yml  release.yml
apps/extension/: package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/fixture-server/: package.json  tsconfig.tsbuildinfo
apps/mock-relay/: package.json  (+2 more)
apps/native-host/: Cargo.toml  native-manifest.json
apps/native-host/installers/macos/: install.sh  uninstall.sh
apps/native-host/installers/windows/: install.ps1  uninstall.ps1
apps/native-host/src/: main.rs
docs/: agent-safety.md  amo-review-notes.md  architecture.md  authentication.md  data-flow.md  data-inventory.md  editor-adapters.md  enterprise.md  native-host.md  permissions.md  protocol.md  self-hosting.md  telemetry.md  troubleshooting.md
scripts/: build-native.mjs  check-data-inventory.mjs  check-versions.mjs  checksums.mjs  e2e.mjs  package-extension.mjs  package-source.mjs  release-prepare.mjs  release-verify.mjs  sbom.mjs  smoke.mjs  webext-lint.mjs
tests/: tsconfig.json
(+48 files in other folders)
