[package]
name = "open-assistant-native-host"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
keyring = "=3.6.3"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls"] }
secrecy = "=0.10.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tokio = { version = "=1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "=1.24.0", features = ["serde", "v4"] }
zeroize = "=1.8.2"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
